TextOutputDev: Set text matrix when painting selection

https://bugs.freedesktop.org/show_bug.cgi?id=61042